# electron

./: .gitignore  .gitmodules  FORKING.md  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.node.json
.github/workflows/: main.yml
native/hoshidicts-sidecar/: CMakeLists.txt  README.md  main.cpp  ranges_to_compat.hpp  sidecar_protocol.py
native/hoshidicts-sidecar/patches/: 0001-unicode-filesystem-paths.patch
scripts/: build-hoshidicts.mjs
src/main/: app.ts  discord.ts  env.d.ts  index.ts  ipc.ts  legacy-migration.ts  mining-audio.ts  protocol.ts  store.ts  updater.ts
src/main/hoshidicts/: client.ts  supervisor.ts  types.ts
src/preload/: index.ts  native.d.ts
test/: hoshidicts-client.test.mjs  legacy-migration.test.mjs  mining-audio.test.mjs
